# AppImageLauncher

./: .clang-format  .gitignore
cmake/modules/: gresources.cmake
src/: CMakeLists.txt
src/ui-gtk/: CMakeLists.txt  app.cpp  app.hpp  dialog.cpp  dialog.hpp  dialog.ui  dialog.ui~  main.cpp  runappimage.hpp  ui-gtk.gresource.xml  window.hpp
